// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button snapshots with default props 1`] = `
<div>
  <button
    accessibility="label"
    class="MuiButtonBase-root sc-gsnTZi sc-hKMtZM"
    id="label"
    tabindex="0"
    type="button"
  >
    <div
      class="sc-eCYdqJ dwMPY"
    >
      <p
        class="sc-dkzDqf fURbKH sc-jSMfEi iOWbTN"
      >
        Text
      </p>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Component: Button snapshots with loading 1`] = `
<div>
  <button
    accessibility="label"
    class="MuiButtonBase-root sc-gsnTZi sc-hKMtZM Mui-disabled"
    disabled=""
    id="label"
    tabindex="-1"
    type="button"
  >
    <div
      class="sc-eCYdqJ dwMPY"
    >
      <div
        aria-label="animation"
        role="button"
        style="width: 60px; height: 60px; overflow: hidden; margin: 0px auto; outline: none;"
        tabindex="0"
        title=""
      />
    </div>
  </button>
</div>
`;

exports[`Component: Button snapshots with other props 1`] = `
<div>
  <button
    accessibility="label"
    class="MuiButtonBase-root sc-gsnTZi sc-hKMtZM Mui-disabled"
    disabled=""
    id="label"
    tabindex="-1"
    type="button"
  >
    <div
      class="sc-eCYdqJ hOWcwL"
      disabled=""
    >
      <p
        class="sc-dkzDqf fURbKH sc-jSMfEi iOWbTN"
        disabled=""
      >
        Text
      </p>
    </div>
  </button>
</div>
`;
